force-app/main/default/objects/CustomerInteractionTopicTree__c/CustomerInteractionTopicTree__c.object-meta.xml
<CustomObject>
    <label>Árvore de Palitagem</label>
    <nameField>
        <label>Descrição</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Árvore de Palitagem</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>