force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/CaseHandling__c.field-meta.xml
<CustomField>
    <fullName>CaseHandling__c</fullName>
    <description>Campo destinado aos grupos de atendimento que podem realizar a tratativa do caso.</description>
    <label>Tratativa de Caso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grupo de Atendimento - Fraude</fullName>
            </value>
            <value>
                <fullName>Grupo de Atendimento - GT Unificado</fullName>
            </value>
            <value>
                <fullName>Grupo de Atendimento - Solução Online</fullName>
            </value>
            <value>
                <fullName>Grupo de Atendimento - Resgate Gravação</fullName>
            </value>
            <value>
                <fullName>Grupo de Atendimento - Ouvidoria</fullName>
            </value>
            <value>
                <fullName>Grupo de Atend. Ajuste Saldo - Atend</fullName>
            </value>
            <value>
                <fullName>Grupo de Atend. Ajuste Saldo - Lojas</fullName>
            </value>
            <value>
                <fullName>Grupo de Atend. Contestação - Atend</fullName>
            </value>
            <value>
                <fullName>Grupo de Atend. Contestação - Lojas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>