force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/CaseOpening__c.field-meta.xml
<CustomField>
    <fullName>CaseOpening__c</fullName>
    <description>Campo destinado aos grupos de atendimento que podem realizar a abertura do caso.</description>
    <label>Abertura de Caso</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GRUPO DE ABERTURA - FRAUDE</fullName>
            </value>
            <value>
                <fullName>GRUPO DE ABERTURA - GT UNIFICADO</fullName>
            </value>
            <value>
                <fullName>GRUPO DE ABERTURA - SOLUÇÃO ONLINE</fullName>
            </value>
            <value>
                <fullName>GRUPO DE ABERTURA - RESGATE DE GRAVAÇÃO</fullName>
            </value>
            <value>
                <fullName>GRUPO DE ABERTURA - OUVIDORIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>