force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/CaseReturn__c.field-meta.xml
<CustomField>
    <fullName>CaseReturn__c</fullName>
    <description>Campo destinado aos grupos de retorno que podem realizar o retorno ao cliente e encerramento do caso.</description>
    <label>Retorno do Caso</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grupo de Retorno - GT Unificado/Atend</fullName>
            </value>
            <value>
                <fullName>Grupo de Retorno - Resgate de Gravação</fullName>
            </value>
            <value>
                <fullName>Grupo de Retorno - Solução Online/Atend</fullName>
            </value>
            <value>
                <fullName>Grupo de Retorno - Ouvidoria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>