force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/CaseStatusGenTopic__c.field-meta.xml
<CustomField>
    <fullName>CaseStatusGenTopic__c</fullName>
    <label>Status do Caso de Geração de Palitagem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aberto</fullName>
                <default>true</default>
                <label>Aberto</label>
            </value>
            <value>
                <fullName>Fechado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>