force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/Channels__c.field-meta.xml
<CustomField>
    <fullName>Channels__c</fullName>
    <label>Canais</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOJAS PRÓPRIAS</fullName>
            </value>
            <value>
                <fullName>LOJAS REVENDAS</fullName>
            </value>
            <value>
                <fullName>CALL CENTER</fullName>
            </value>
            <value>
                <fullName>TELEVENDAS</fullName>
            </value>
            <value>
                <fullName>MEU VIVO</fullName>
            </value>
            <value>
                <fullName>E-COMMERCE</fullName>
            </value>
            <value>
                <fullName>CALLCENTER</fullName>
                <isActive>false</isActive>
                <label>CALLCENTER</label>
            </value>
            <value>
                <fullName>LOJA PROPRIA</fullName>
                <isActive>false</isActive>
                <label>LOJA PROPRIA</label>
            </value>
            <value>
                <fullName>REVENDA</fullName>
                <isActive>false</isActive>
                <label>REVENDA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>