force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classificação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atendimento</fullName>
            </value>
            <value>
                <fullName>Elogio</fullName>
            </value>
            <value>
                <fullName>Incidência</fullName>
            </value>
            <value>
                <fullName>Informação</fullName>
            </value>
            <value>
                <fullName>Serviço</fullName>
            </value>
            <value>
                <fullName>Sugestão</fullName>
            </value>
            <value>
                <fullName>Reclamação</fullName>
                <isActive>false</isActive>
                <label>Reclamação</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>