force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/CustomerFeedback__c.field-meta.xml
<CustomField>
    <fullName>CustomerFeedback__c</fullName>
    <description>Campo de tipo de retorno ao cliente.</description>
    <label>Retorno ao Cliente</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONTATO TELEFÔNICO</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>EMAIL</fullName>
            </value>
            <value>
                <fullName>SEM RETORNO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>