force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/CustomerTypes__c.field-meta.xml
<CustomField>
    <fullName>CustomerTypes__c</fullName>
    <label>Tipos de Clientes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PROSPECT</fullName>
            </value>
            <value>
                <fullName>CLIENTE</fullName>
            </value>
            <value>
                <fullName>NÃO CLASSIFICADO</fullName>
                <isActive>false</isActive>
                <label>NÃO CLASSIFICADO</label>
            </value>
            <value>
                <fullName>PESSOA FÍSICA</fullName>
                <isActive>false</isActive>
                <label>PESSOA FÍSICA</label>
            </value>
            <value>
                <fullName>PESSOA JURÍDICA</fullName>
                <isActive>false</isActive>
                <label>PESSOA JURÍDICA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>