force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/FlowAPIName__c.field-meta.xml
<CustomField>
    <fullName>FlowAPIName__c</fullName>
    <label>Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>