force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/FormType__c.field-meta.xml
<CustomField>
    <fullName>FormType__c</fullName>
    <description>Indica qual o Tipo de formulário a ser usado pelo palito</description>
    <label>Formulário</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processo e Retorno ao Cliente</fullName>
                <default>true</default>
                <label>Processo e Retorno ao Cliente</label>
            </value>
            <value>
                <fullName>Portabilidade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>