force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/GPSFlow__c.field-meta.xml
<CustomField>
    <fullName>GPSFlow__c</fullName>
    <label>Fluxo GPS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>