force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/GPSId__c.field-meta.xml
<CustomField>
    <fullName>GPSId__c</fullName>
    <label>Id GPS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>