force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/IdVivoNet__c.field-meta.xml
<CustomField>
    <fullName>IdVivoNet__c</fullName>
    <description>Field to input ID of topic on VivoNet</description>
    <label>Identificação VivoNet</label>
    <length>30</length>
    <type>Text</type>
</CustomField>