force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/Instance__c.field-meta.xml
<CustomField>
    <fullName>Instance__c</fullName>
    <label>Instância</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LINHA TELEFÔNICA</fullName>
            </value>
            <value>
                <fullName>BANDA LARGA</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>CONTROLE</fullName>
            </value>
            <value>
                <fullName>PÓS-PAGO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>