force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/InteractionAutomaticTopic__c.field-meta.xml
<CustomField>
    <fullName>InteractionAutomaticTopic__c</fullName>
    <description>Field to relation Customer Interaction Topics to Automatic Topic</description>
    <label>Interação Automática</label>
    <length>50</length>
    <type>Text</type>
</CustomField>