force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>IF(Active__c == TRUE,&apos;Active&apos;,&apos;Inactive&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ativo</label>
    <type>Text</type>
</CustomField>