force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/LegacySystem__c.field-meta.xml
<CustomField>
    <fullName>LegacySystem__c</fullName>
    <label>Sistema de Origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>NEXT</fullName>
            </value>
            <value>
                <fullName>Pré</fullName>
                <isActive>false</isActive>
                <label>Pré</label>
            </value>
            <value>
                <fullName>SIEBEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>