force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/LinesTypes__c.field-meta.xml
<CustomField>
    <fullName>LinesTypes__c</fullName>
    <label>Tipos de Linhas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NÃO CLASSIFICADO</fullName>
            </value>
            <value>
                <fullName>PÓS-PAGO GSM</fullName>
            </value>
            <value>
                <fullName>PRÉ-PAGO GSM</fullName>
            </value>
            <value>
                <fullName>CONTROLE GSM</fullName>
            </value>
            <value>
                <fullName>POS-PAGO GSM</fullName>
                <isActive>false</isActive>
                <label>POS-PAGO GSM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>