force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/OmniTree__c.field-meta.xml
<CustomField>
    <fullName>OmniTree__c</fullName>
    <description>O campo será o nome do palito, e deverá aparecer para o APP.</description>
    <label>OmniTree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>