force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/OperatorSegment__c.field-meta.xml
<CustomField>
    <fullName>OperatorSegment__c</fullName>
    <label>Segmento Operador</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GOLD</fullName>
            </value>
            <value>
                <fullName>LOJA</fullName>
            </value>
            <value>
                <fullName>OMNICHANNEL</fullName>
            </value>
            <value>
                <fullName>OUVIDORIA</fullName>
            </value>
            <value>
                <fullName>PAP</fullName>
            </value>
            <value>
                <fullName>PLATINUM</fullName>
            </value>
            <value>
                <fullName>PRIME</fullName>
            </value>
            <value>
                <fullName>PURPURA</fullName>
                <label>PÚRPURA</label>
            </value>
            <value>
                <fullName>REVENDA</fullName>
            </value>
            <value>
                <fullName>SILVER</fullName>
            </value>
            <value>
                <fullName>SUPORTE A LOJAS</fullName>
            </value>
            <value>
                <fullName>TELEVENDAS</fullName>
            </value>
            <value>
                <fullName>VIVO V</fullName>
            </value>
            <value>
                <fullName>LOJAS</fullName>
                <isActive>false</isActive>
                <label>LOJAS</label>
            </value>
            <value>
                <fullName>Purpura-OLD</fullName>
                <isActive>false</isActive>
                <label>Purpura-OLD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>