force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/ParentTopicId__c.field-meta.xml
<CustomField>
    <fullName>ParentTopicId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Topic Id</description>
    <label>Palito Pai</label>
    <referenceTo>CustomerInteractionTopicTree__c</referenceTo>
    <relationshipLabel>Palitos Filhos</relationshipLabel>
    <relationshipName>ParentTopic</relationshipName>
    <type>Lookup</type>
</CustomField>