force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/Portfolios__c.field-meta.xml
<CustomField>
    <fullName>Portfolios__c</fullName>
    <label>Carteiras</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BABY SITTING</fullName>
            </value>
            <value>
                <fullName>CLIENTES ESPECIAIS</fullName>
            </value>
            <value>
                <fullName>CONTROLE</fullName>
            </value>
            <value>
                <fullName>DESCONHECIDO</fullName>
            </value>
            <value>
                <fullName>FUNCIONÁRIO VIVO</fullName>
            </value>
            <value>
                <fullName>NÃO CLASSIFICADO</fullName>
            </value>
            <value>
                <fullName>PESSOA FÍSICA</fullName>
            </value>
            <value>
                <fullName>PORT-IN INDEVIDO</fullName>
            </value>
            <value>
                <fullName>PESSOA FISICA</fullName>
                <isActive>false</isActive>
                <label>PESSOA FISICA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>