force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Tipo de Produto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
                <label>Pós/Controle</label>
            </value>
            <value>
                <fullName>Fixed</fullName>
                <label>Fixa</label>
            </value>
            <value>
                <fullName>Pre</fullName>
                <label>Pré</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>