force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/Regions__c.field-meta.xml
<CustomField>
    <fullName>Regions__c</fullName>
    <label>Regionais</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC - TELEACRE</fullName>
            </value>
            <value>
                <fullName>AL - VIVO S.A.</fullName>
            </value>
            <value>
                <fullName>BA - TELEBAHIA CELULAR</fullName>
            </value>
            <value>
                <fullName>CE - VIVO S.A.</fullName>
            </value>
            <value>
                <fullName>DF - TCO</fullName>
            </value>
            <value>
                <fullName>MG - VIVO MINAS</fullName>
            </value>
            <value>
                <fullName>MS - TELEMS</fullName>
            </value>
            <value>
                <fullName>PB - VIVO S.A.</fullName>
            </value>
            <value>
                <fullName>PE - VIVO S.A.</fullName>
            </value>
            <value>
                <fullName>PI - VIVO S.A.</fullName>
            </value>
            <value>
                <fullName>RJ - TELERJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>