force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/RelationshipType__c.field-meta.xml
<CustomField>
    <fullName>RelationshipType__c</fullName>
    <label>Tipo de Relacionamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automático/Manual</fullName>
                <default>true</default>
                <label>Automático/Manual</label>
            </value>
            <value>
                <fullName>Caso/Processo</fullName>
            </value>
            <value>
                <fullName>GPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>