force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/Segmentations__c.field-meta.xml
<CustomField>
    <fullName>Segmentations__c</fullName>
    <label>Segmentações</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PLATINUM</fullName>
            </value>
            <value>
                <fullName>GOLD</fullName>
            </value>
            <value>
                <fullName>SILVER</fullName>
            </value>
            <value>
                <fullName>PÚRPURA</fullName>
            </value>
            <value>
                <fullName>NÃO CLASSIFICADO</fullName>
            </value>
            <value>
                <fullName>SEM SEGMENTO</fullName>
            </value>
            <value>
                <fullName>V</fullName>
                <isActive>false</isActive>
                <label>V</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>