force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/SendSMS__c.field-meta.xml
<CustomField>
    <fullName>SendSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envio SMS</label>
    <type>Checkbox</type>
</CustomField>