force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <description>Campo SLA do palito</description>
    <label>SLA</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CaseHandling__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 dia útil</fullName>
            </value>
            <value>
                <fullName>2 dias úteis</fullName>
            </value>
            <value>
                <fullName>5 dias úteis</fullName>
            </value>
            <value>
                <fullName>10 dias corridos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>