force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/TargetFlow__c.field-meta.xml
<CustomField>
    <fullName>TargetFlow__c</fullName>
    <description>Fluxo de negócio a ser acionado, o preenchimento deste campo deve ocorrer apenas para registros da Palitagem do tipo Palito. Através da combinação deste campo com o campo Sistema de Origem pode-se obter o sistema e o fluxo que o palito deve estar acionando.</description>
    <inlineHelpText>Fluxo de negócio a ser acionado, o preenchimento deste campo deve ocorrer apenas para registros da Palitagem do tipo Palito.</inlineHelpText>
    <label>Fluxo Alvo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InvoiceDispute</fullName>
                <label>Contestar Fatura</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>