force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Campo criado para desenvolvimento de POC</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pasta</fullName>
            </value>
            <value>
                <fullName>Palito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>