force-app/main/default/objects/CustomerInteractionTopicTree__c/fields/VisibleTo__c.field-meta.xml
<CustomField>
    <fullName>VisibleTo__c</fullName>
    <label>Visível Para</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COMUNIDADE - PROTOCOLO DETALHE</fullName>
            </value>
            <value>
                <fullName>COMUNIDADE - RETENÇÃO</fullName>
            </value>
            <value>
                <fullName>COMUNIDADE - VENDAS</fullName>
            </value>
            <value>
                <fullName>ORG VIVO - B2C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>